refactor: extract enrichment logic to dedicated services and apply SRP
- Moved enrichment logic from EnrichmentService to CountryService and GenreService
- Applied Single Responsibility Principle (SRP) across enrichment-related code
- Replaced all Integer IDs with Long for consistency across domain models